# Vision-Language-Autonomy

./: launch.sh  setup.sh
ai_module/src/: config.json  cookies.txt
ai_module/src/benchmark/: CMakeLists.txt  package.xml
ai_module/src/benchmark/scripts/: benchmark_runner_node.py
ai_module/src/exploration/: CMakeLists.txt  package.xml  run.launch  run_real.launch
ai_module/src/exploration/launch/: exploration.launch
ai_module/src/exploration/scripts/: 360_clip.py  Keyframe.py  astar_planner_py.py  coverage_manager.py  coverage_path.py  exploration_coverage.py  filter_scan.py  frontier_mapping.py  grid_map.py  multi_goal_planner.py  multi_view.py  object_navigation.py  occupancy_map.py  path_follower.py  path_recorder.py  utils.py  visualize_utils.py
ai_module/src/exploration/srv/: AstarPath.srv
ai_module/src/mapconversion/: CMakeLists.txt  README.md
ai_module/src/mapconversion/include/: Map2D.hh
ai_module/src/mapconversion/launch/: map_conversion_oct.launch  vla.launch  vla_real.launch
ai_module/src/mapconversion/src/: MapConverter.cpp  map_conversion_oct_node.cpp
ai_module/src/sem/: CMakeLists.txt  package.xml  setup.py
ai_module/src/sem/app/: active_utils.py  bg_process.py  generate_seg_cloud.py  gt_graph_node  gt_sg_node  jackal_sg_node  label_constants.py  load_shm.py  mapping.py  object_detect.py  object_merge.py  object_node_service.py  room_segment.py  scene_graph_node  semantic_seg_node_0505  semantic_seg_node_track  sensor_sync.py  slam_classes.py  utils.py  visualize.py
ai_module/src/sem/config/: 00824.json  homebuilding2.json  livingroom1.json  real.json  real_robot.json  simulation.json  simulation_gt.json  yolo-world_config_l.py  yolo-world_config_m.py  yolo-world_config_x.py
ai_module/src/sem/data/: scannet200_classes_colors.json
ai_module/src/sem/launch/: gt.launch  jackal.launch  sem.launch  sg.launch
ai_module/src/sem/msg/: ObjectNode.msg  ObjectNodes.msg
ai_module/src/sem/srv/: ObjectNodeFromClass.srv  SetClasses.srv
ai_module/src/snapshot/: CMakeLists.txt  package.xml
ai_module/src/snapshot/include/: snapshot.h
ai_module/src/snapshot/msg/: MapObject.msg
ai_module/src/snapshot/src/: snapshot.cpp
ai_module/src/snapshot/srv/: SnapshotData.srv
ai_module/src/task_planner/: CMakeLists.txt  README.md  package.xml  task_planner_server.py
ai_module/src/task_planner/include/: task_planner.h
ai_module/src/task_planner/launch/: task_planner.launch  task_planner_real.launch
ai_module/src/task_planner/msg/: Edge.msg  Entity.msg  EntityRelation.msg  Graph.msg  KeyValue.msg  Node.msg  Plan.msg  SubTask.msg  Subplans.msg  Task.msg
ai_module/src/task_planner/scripts/: get_graph.py  graph_retriever.py  prompt.txt  prompt_example.py  subplans2graphs.py  task_planner_client.py  task_planner_main.py  task_planner_server.py  test_task_planner.py  utils.py  visualize_output.py
ai_module/src/task_planner/src/: main.cpp  task_planner.cpp  task_planner_client.cpp
ai_module/src/task_planner/srv/: GetSubplans.srv
ai_module/src/task_planner/utils/: make_all_tasks_json.py
ai_module/src/traversable_authority/: CMakeLists.txt  package.xml
ai_module/src/traversable_authority/scripts/: traversable_authority_node.py
ai_module/src/traversable_authority/srv/: BlockBBox.srv  BlockSegment.srv
ai_module/src/user_interface/: CMakeLists.txt  package.xml
ai_module/src/user_interface/include/: sub_interface.h  user_interface.h
ai_module/src/user_interface/src/: main.cpp  sub_interface.cpp  user_interface.cpp
ai_module/src/user_interface/srv/: SetInput.srv  UserInput.srv
ai_module/src/utils/: logger.h  logger.py  pub_all.py  refine_bbox.py  timer.py  utils.py  visualizer.py
ai_module/src/utils/debug/: __init__.py  rospy.py
ai_module/src/visual_grounding/: CMakeLists.txt  package.xml
ai_module/src/vlm/: CMakeLists.txt  package.xml
ai_module/src/vlm/include/: manager.h
(+59 files in other folders)
